--- a/dashboard.html
+++ b/dashboard.html
@@ -68,7 +68,7 @@
     const firebaseConfig = {
       apiKey: "AIzaSyAXfVdVR6ABdiJ2iyePUv_wR6AYuyFqZjs",
       authDomain: "warehouse689-d212c.firebaseapp.com",
-      databaseURL: "https://warehouse689-d212c-default-rtdb.firebaseio.com",
+      databaseURL: "https://warehouse689-d212c-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "warehouse689-d212c",
       storageBucket: "warehouse689-d212c.firebasestorage.app",
       messagingSenderId: "524439415659",
