--- a/dashboard.html
+++ b/dashboard.html
@@ -1,76 +1,73 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Phế Liệu An Dân - Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Tailwind CSS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Firebase SDK compat -->
   <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.3.1/firebase-database-compat.js"></script>
 </head>
 <body class="bg-gray-100 p-6">
-  <div class="max-w-5xl mx-auto bg-white rounded-lg shadow p-6">
-    <!-- Header -->
+  <div class="max-w-6xl mx-auto bg-white rounded-lg shadow p-6">
     <div class="flex justify-between items-center mb-4">
-      <h2 class="text-xl font-bold text-green-600">Xin chào, <span id="tenNguoiDung">người dùng</span></h2>
-      <button onclick="logout()" class="text-sm text-red-500 hover:underline">Đăng xuất</button>
+      <h2 class="text-xl font-bold text-green-600">Welcome, <span id="userName">User</span></h2>
+      <button onclick="logout()" class="text-sm text-red-500 hover:underline">Logout</button>
     </div>
 
-    <!-- Nút chọn chức năng -->
-    <div class="grid grid-cols-3 gap-4 mb-6">
-      <button onclick="showForm('nhapkho')" class="bg-green-600 text-white py-2 rounded">Nhập kho</button>
-      <button onclick="alert('Chức năng đang phát triển')" class="bg-yellow-500 text-white py-2 rounded">Xuất kho</button>
-      <button onclick="alert('Chức năng đang phát triển')" class="bg-purple-500 text-white py-2 rounded">Chi phí</button>
+    <div class="mb-4">
+      <button onclick="showForm()" class="bg-green-600 text-white px-4 py-2 rounded">+ New Import</button>
     </div>
 
-    <!-- FORM NHẬP KHO -->
-    <div id="formNhapKho" class="hidden">
-      <h3 class="text-lg font-semibold mb-4">Form Nhập Kho</h3>
-      <!-- Thông tin khách hàng -->
+    <!-- Form nhập kho -->
+    <div id="importForm" class="hidden mb-8 border p-4 rounded bg-gray-50">
+      <h3 class="text-lg font-semibold mb-2">New Import Entry</h3>
       <div class="grid grid-cols-2 gap-4 mb-4">
-        <input id="khachHang" type="text" placeholder="Tên khách hàng" class="border p-2 rounded w-full">
-        <input id="diaChi" type="text" placeholder="Địa chỉ" class="border p-2 rounded w-full">
-        <input id="cccd" type="text" placeholder="CCCD" class="border p-2 rounded w-full">
-        <input id="sdt" type="text" placeholder="SĐT" class="border p-2 rounded w-full">
+        <input id="customerName" type="text" placeholder="Customer Name" class="border p-2 rounded w-full" />
+        <input id="address" type="text" placeholder="Address" class="border p-2 rounded w-full" />
+        <input id="idNumber" type="text" placeholder="ID Number" class="border p-2 rounded w-full" />
+        <input id="phone" type="text" placeholder="Phone Number" class="border p-2 rounded w-full" />
       </div>
 
-      <!-- Danh sách hàng hóa -->
-      <div id="dsHangHoa" class="space-y-2 mb-4"></div>
-      <button onclick="themMatHang()" class="bg-blue-500 text-white px-4 py-2 rounded">+ Thêm mặt hàng</button>
+      <div id="itemsList" class="space-y-2 mb-4"></div>
+      <button onclick="addItem()" class="bg-blue-500 text-white px-4 py-1 rounded">+ Add Item</button>
 
-      <!-- Tổng tiền -->
-      <div class="mt-4 font-bold">Tổng tiền: <span id="tongTien">0</span> đ</div>
-      <button onclick="luuNhapKho()" class="mt-4 bg-green-600 text-white px-4 py-2 rounded">Lưu</button>
+      <div class="mt-4 font-bold">Total: <span id="totalAmount">0</span> đ</div>
+      <button onclick="saveImport()" class="mt-4 bg-green-600 text-white px-6 py-2 rounded">Save</button>
     </div>
 
-    <!-- BẢNG DỮ LIỆU -->
-    <div class="mt-10">
-      <h3 class="text-lg font-semibold mb-2">Danh sách nhập kho</h3>
-      <table class="w-full border text-sm" id="bangNhapKho">
+    <!-- Danh sách nhập kho -->
+    <div>
+      <h3 class="text-lg font-semibold mb-2">Import Entries</h3>
+      <table class="w-full border text-sm mb-6">
         <thead class="bg-gray-200">
           <tr>
-            <th class="border px-2 py-1">Khách hàng</th>
-            <th class="border px-2 py-1">SĐT</th>
-            <th class="border px-2 py-1 text-right">Tổng tiền</th>
-            <th class="border px-2 py-1 text-center">Số mặt hàng</th>
+            <th class="border px-2 py-1">#</th>
+            <th class="border px-2 py-1">Date</th>
+            <th class="border px-2 py-1">Customer</th>
+            <th class="border px-2 py-1 text-center">Items</th>
+            <th class="border px-2 py-1 text-right">Total</th>
           </tr>
         </thead>
-        <tbody></tbody>
+        <tbody id="importTable"></tbody>
       </table>
+    </div>
+
+    <!-- Chi tiết phiếu nhập -->
+    <div id="importDetail" class="hidden bg-gray-50 p-4 border rounded">
+      <h3 class="text-lg font-bold mb-2">Import Detail</h3>
+      <div id="detailContent" class="text-sm"></div>
     </div>
   </div>
 
   <script>
-    // Cấu hình Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAXfVdVR6ABdiJ2iyePUv_wR6AYuyFqZjs",
       authDomain: "warehouse689-d212c.firebaseapp.com",
       databaseURL: "https://warehouse689-d212c-default-rtdb.asia-southeast1.firebasedatabase.app",
       projectId: "warehouse689-d212c",
-      storageBucket: "warehouse689-d212c.firebasestorage.app",
+      storageBucket: "warehouse689-d212c.appspot.com",
       messagingSenderId: "524439415659",
       appId: "1:524439415659:web:b0904ee6c3b1fdcfd77a2e"
     };
@@ -78,95 +75,138 @@
     const auth = firebase.auth();
     const db = firebase.database();
 
-    // Xác thực người dùng
     auth.onAuthStateChanged(user => {
-      if (user) {
-        document.getElementById("tenNguoiDung").innerText = user.displayName || user.email;
-        taiDanhSachNhapKho();
-      } else {
-        window.location.href = "index.html";
-      }
+      if (!user) return (window.location.href = "index.html");
+      document.getElementById("userName").innerText = user.displayName || user.email;
+      loadImports();
     });
 
     function logout() {
-      auth.signOut().then(() => window.location.href = "index.html");
+      auth.signOut().then(() => (window.location.href = "index.html"));
     }
 
-    // Hiển thị form
-    function showForm(type) {
-      document.getElementById("formNhapKho").classList.add("hidden");
-      if (type === "nhapkho") document.getElementById("formNhapKho").classList.remove("hidden");
+    function showForm() {
+      document.getElementById("importForm").classList.toggle("hidden");
     }
 
-    // Thêm 1 mặt hàng
-    function themMatHang() {
-      const row = document.createElement("div");
-      row.className = "grid grid-cols-5 gap-2";
-      row.innerHTML = `
-        <input type="text" placeholder="Tên hàng" class="border p-1 rounded" oninput="tinhTong()">
-        <input type="text" placeholder="ĐVT" class="border p-1 rounded" oninput="tinhTong()">
-        <input type="number" placeholder="SL" class="border p-1 rounded" oninput="tinhTong()">
-        <input type="number" placeholder="Đơn giá" class="border p-1 rounded" oninput="tinhTong()">
-        <input type="text" placeholder="Thành tiền" class="border p-1 rounded bg-gray-100" readonly>
+    function addItem() {
+      const div = document.createElement("div");
+      div.className = "grid grid-cols-5 gap-2";
+      div.innerHTML = `
+        <input placeholder="Item Name" class="border p-1 rounded" />
+        <select class="border p-1 rounded">
+          <option value="">Unit</option>
+          <option value="kg">kg</option>
+          <option value="pcs">pcs</option>
+        </select>
+        <input type="number" placeholder="Quantity" class="border p-1 rounded" />
+        <input type="number" placeholder="Unit Price" class="border p-1 rounded" />
+        <input placeholder="Amount" class="border p-1 rounded bg-gray-100" readonly />
       `;
-      document.getElementById("dsHangHoa").appendChild(row);
+      document.getElementById("itemsList").appendChild(div);
     }
 
-    // Tính thành tiền và tổng
-    function tinhTong() {
-      let tong = 0;
-      document.querySelectorAll("#dsHangHoa > div").forEach(row => {
-        const sl = parseFloat(row.children[2].value) || 0;
-        const dg = parseFloat(row.children[3].value) || 0;
-        const tt = sl * dg;
-        row.children[4].value = tt.toLocaleString();
-        tong += tt;
+    function calculateTotal() {
+      let total = 0;
+      document.querySelectorAll("#itemsList > div").forEach(row => {
+        const qty = parseFloat(row.children[2].value) || 0;
+        const price = parseFloat(row.children[3].value) || 0;
+        const amount = qty * price;
+        row.children[4].value = amount.toLocaleString();
+        total += amount;
       });
-      document.getElementById("tongTien").innerText = tong.toLocaleString();
+      document.getElementById("totalAmount").innerText = total.toLocaleString();
     }
 
-    // Lưu dữ liệu nhập kho
-    function luuNhapKho() {
-      const data = {
-        khachHang: document.getElementById("khachHang").value,
-        diaChi: document.getElementById("diaChi").value,
-        cccd: document.getElementById("cccd").value,
-        sdt: document.getElementById("sdt").value,
-        hangHoa: [],
-        tongTien: document.getElementById("tongTien").innerText.replace(/,/g, "")
-      };
-      document.querySelectorAll("#dsHangHoa > div").forEach(row => {
-        data.hangHoa.push({
-          ten: row.children[0].value,
-          dvt: row.children[1].value,
-          sl: row.children[2].value,
-          dg: row.children[3].value,
-          tt: row.children[4].value
+    document.getElementById("itemsList").addEventListener("input", calculateTotal);
+
+    function saveImport() {
+      const name = document.getElementById("customerName").value.trim() || "Unknown";
+      const address = document.getElementById("address").value.trim() || "Not provided";
+      const idNumber = document.getElementById("idNumber").value.trim() || "Not provided";
+      const phone = document.getElementById("phone").value.trim() || "Not provided";
+
+      const items = [];
+      document.querySelectorAll("#itemsList > div").forEach(row => {
+        const itemName = row.children[0].value.trim();
+        const unit = row.children[1].value;
+        const qty = row.children[2].value;
+        const price = row.children[3].value;
+        if (itemName && unit && qty && price) {
+          items.push({
+            name: itemName,
+            unit,
+            quantity: qty,
+            unitPrice: price,
+            amount: (qty * price).toFixed(0)
+          });
+        }
+      });
+
+      if (items.length === 0) return alert("Please enter valid items!");
+
+      db.ref("imports").once("value").then(snapshot => {
+        const count = snapshot.numChildren() + 1;
+        const id = "PNK" + String(count).padStart(3, "0");
+        const data = {
+          id,
+          customerName: name,
+          address,
+          idNumber,
+          phone,
+          date: new Date().toISOString(),
+          items,
+          totalAmount: items.reduce((a, b) => a + parseFloat(b.amount), 0)
+        };
+        db.ref("imports/" + id).set(data).then(() => {
+          alert("Saved successfully!");
+          location.reload();
         });
       });
-      db.ref("nhapkho").push(data).then(() => {
-        alert("Đã lưu nhập kho!");
-        location.reload();
-      });
     }
 
-    // Tải danh sách nhập kho
-    function taiDanhSachNhapKho() {
-      const tbody = document.querySelector("#bangNhapKho tbody");
-      db.ref("nhapkho").on("value", snap => {
+    function loadImports() {
+      const tbody = document.getElementById("importTable");
+      db.ref("imports").on("value", snap => {
         tbody.innerHTML = "";
+        let stt = 1;
         snap.forEach(child => {
           const d = child.val();
           const tr = document.createElement("tr");
+          tr.classList.add("cursor-pointer", "hover:bg-gray-100");
+          tr.onclick = () => showDetail(d);
           tr.innerHTML = `
-            <td class="border px-2 py-1">${d.khachHang}</td>
-            <td class="border px-2 py-1">${d.sdt}</td>
-            <td class="border px-2 py-1 text-right">${Number(d.tongTien).toLocaleString()}</td>
-            <td class="border px-2 py-1 text-center">${d.hangHoa.length}</td>
+            <td class="border px-2 py-1">${stt++}</td>
+            <td class="border px-2 py-1">${new Date(d.date).toLocaleDateString()}</td>
+            <td class="border px-2 py-1">${d.customerName}</td>
+            <td class="border px-2 py-1 text-center">${d.items.length}</td>
+            <td class="border px-2 py-1 text-right">${Number(d.totalAmount).toLocaleString()}</td>
           `;
           tbody.appendChild(tr);
         });
       });
+    }
+
+    function showDetail(d) {
+      const box = document.getElementById("importDetail");
+      const detail = `
+        <p><strong>Code:</strong> ${d.id}</p>
+        <p><strong>Customer:</strong> ${d.customerName}</p>
+        <p><strong>Phone:</strong> ${d.phone}</p>
+        <p><strong>Address:</strong> ${d.address}</p>
+        <p><strong>ID Number:</strong> ${d.idNumber}</p>
+        <p><strong>Date:</strong> ${new Date(d.date).toLocaleString()}</p>
+        <hr class="my-2"/>
+        <p class="font-semibold mb-1">Items:</p>
+        <ul class="list-disc pl-5">
+          ${d.items.map(item => `<li>${item.name} (${item.unit}) x ${item.quantity} = ${Number(item.amount).toLocaleString()} đ</li>`).join("")}
+        </ul>
+        <hr class="my-2"/>
+        <p><strong>Total:</strong> ${Number(d.totalAmount).toLocaleString()} đ</p>
+      `;
+      document.getElementById("detailContent").innerHTML = detail;
+      box.classList.remove("hidden");
+      box.scrollIntoView({ behavior: "smooth" });
     }
   </script>
 </body>
